Fixed message animation bug on iphone. Moved exercise solutions to tests.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -27,6 +27,8 @@ body
     box-sizing: border-box
 
 .input-group
+  .input-info
+    min-height: 38px
   .message
     height: 0
     transition-property: height, opacity
